<resources>


        <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">Gente e Terra</string>



    <string name="app_name">VMT</string>
    <string name="informe">Insira o nome de usuário:</string>
    <string name="login">Insira o nome:</string>
    <string name="Login">Login</string>
    <string name="Senha">Insira a senha:</string>
    <string name="title_activity_form">Form</string>
    <string name="voltar">Voltar</string>
    <string name="proximo">Proximo</string>
    <string name="data">Data:</string>
    <string name="iniciohs">Hora Inicio:</string>
    <string name="fimhs">Hora Fim:</string>
    <string name="pontoref">Ponto de Referência:</string>
    <string name="problema">Problema Detectado:</string>
    <string name="solucao">Solução Apresentada:</string>
    <string name="controle">Controle Interno</string>
    <string name="lacre">Lacre</string>
    <string name="Entrada">Entrada</string>
    <string name="Saida">Saida</string>
    <string name="antena">Atena Amp.</string>
    <string name="antenasat">Atena Sat.</string>
    <string name="chicote">Chicote</string>
    <string name="interfaces">Interface</string>
    <string name="term">Term. Comum.</string>
    <string name="status">Status</string>
    <string name="voltagem">Voltagem:</string>
    <string name="comunicador">Comunicador:</string>
    <string name="antenasatelital">Antena Satelital:</string>
    <string name="script">Script:</string>
    <string name="antenagprs">Antena GPRS:</string>
    <string name="condicoes">Cond. do Sis. Elétrico:</string>
    <string name="cobrança">Cobrança</string>
    <string name="visita">Visita:</string>
    <string name="respdraga">Resp. Draga:</string>
    <string name="kmrodado">Km rodado:</string>
    <string name="Deslocamento">Deslocamento:</string>
    <string name="assinresp">Assin. Responsável:</string>
    <string name="assintec">Assin. Técnico:</string>
    <string name="total">Total a Pagar:</string>
    <string name="id">ID:</string>
    <string name="salvar">Salvar</string>
    <string name="finalizar">Finalizar</string>
    <string name="marcar">Lembrar login e senha</string>
    <string name="csv">Visualizar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="repsenha">Repita a senha:</string>
    <string name="imguser">Img. User</string>
    <string name="imgpasswd">Img. Senha</string>
    <string name="card">Img. card</string>
    <string name="calendar">Img. calendar</string>
    <string name="time">Img. time</string>
    <string name="map">Img. mapa</string>
    <string name="logogt">Img. logogt</string>
    <string name="imgvoltagem">Img. voltagem</string>
    <string name="imgsatelite">Img. satelite</string>
    <string name="imgcelular">Img. celular</string>
    <string name="imgscript">Img. script</string>
    <string name="nota">Img. nota</string>
    <string name="imgauditar">Img. auditar</string>
    <string name="imgresponse">Img. resnposavel</string>
    <string name="imgkm">Img. km</string>
    <string name="imgcarro">Img. carro</string>
    <string name="imgcash">Img. cash</string>
    <string name="obs">Observações:</string>


    <string name="large_text">







        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
