<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".form3">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/controle"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/condsys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/condicoes"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/viewview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/cobrança"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/visita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="139dp"
        android:ems="10"
        android:hint="@string/visita"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/respdraga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/respdraga"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visita"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/kmrodado"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/desloc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respdraga"
        tools:targetApi="o" />


    <EditText
        android:id="@+id/desloc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/Deslocamento"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/km"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/pag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="98dp"
        android:ems="10"
        android:hint="@string/total"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desloc"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnform32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="255dp"
        android:text="@string/voltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="72dp"
        android:text="@string/finalizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="30dp"
        android:layout_height="23dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imgauditar"
        app:layout_constraintEnd_toStartOf="@+id/condsys"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/auditar" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="30dp"
        android:layout_height="23dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/visita"
        app:layout_constraintEnd_toStartOf="@+id/visita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/visita" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="30dp"
        android:layout_height="23dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imgresponse"
        app:layout_constraintEnd_toStartOf="@+id/respdraga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/response" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="30dp"
        android:layout_height="23dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="259dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imgkm"
        app:layout_constraintEnd_toStartOf="@+id/km"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/km" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="30dp"
        android:layout_height="23dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="318dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imgcarro"
        app:layout_constraintEnd_toStartOf="@+id/desloc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/carro" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="30dp"
        android:layout_height="23dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="369dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imgcash"
        app:layout_constraintEnd_toStartOf="@+id/pag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cash" />

</android.support.constraint.ConstraintLayout>